--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "photovegh",
   "license": "MIT",
   "dependencies": {
+    "body-parser": "^1.19.2",
     "bootstrap": "^4.6.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
