--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^4.6.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
-    "mysql": "^2.18.1"
+    "i": "^0.3.7",
+    "mysql": "^2.18.1",
+    "npm": "^8.6.0"
   }
 }
